# QuteLauncher

./: .gitignore  CMakeLists.txt  README.md  index.html  params.json  qute-launcher.pro
src/: resources.qrc  src.pro
src/android/: AndroidManifest.xml  build.gradle  google-services.json  gradle.properties  local.properties
src/android/full/: AndroidManifest.xml
src/android/full/com/iktwo/qutelauncher/: CustomFirebaseMessagingService.java  QuteLauncherFlavored.java  QuteLauncherFlavored.kt
src/android/gradle/wrapper/: gradle-wrapper.properties
src/android/res/values/: libs.xml
src/android/res/values-v19/: styles.xml
src/android/res/values-v21/: styles.xml
src/qml/: ApplicationGrid.qml  ApplicationTile.qml  ExpandableItem.qml  IntroView.qml  main.qml
src/qml/components/: MenuItem.qml  PressAndHoldMenu.qml  RadioButtonStyleDefault.qml  qmldir
src/qml/config/: Dimensions.qml  Theme.qml  qmldir
src/qml/debug/: Debug.qml  qmldir
src/qml/intro/: IntroEnd.qml  IntroMain.qml  IntroScreen.qml  IntroSelection.qml
src/qml/themes/classic/: ApplicationGrid.qml  ApplicationGridMenu.qml  ApplicationTile.qml  ExpandableItem.qml  ThemeMain.qml
src/qml/themes/tiles/: ApplicationGrid.qml  ApplicationList.qml  ApplicationMenu.qml  ApplicationSection.qml  ColorPicker.qml  Configuration.qml  MenuItem.qml  PressAndHoldMenu.qml  SectionNavigator.qml  ThemeMain.qml  qmldir
src/src/: application.cpp  application.h  applicationinfo.cpp  applicationinfo.h  iconimageprovider.cpp  iconimageprovider.h  launcher.cpp  launcher.h  main.cpp  packagemanager.cpp  packagemanager.h  screenvalues.cpp  screenvalues.h  system.cpp  system.h  uivalues.cpp  uivalues.h  wallpaperprovider.cpp  wallpaperprovider.h
(+9 files in other folders)
